remove url builders